[package]
name = "pb"
version = "5.0.0"
edition = "2024"

[build-dependencies]
protoc-bin-vendored = "3.1.0"
prost-build        = "0.13.5"
pbjson-build       = "0.7.0"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.142"
pbjson = "0.7.0"
pbjson-types = "0.7.0"
prost = { git = "https://github.com/66hh/prost-astrobox", branch = "master" }